<resources>
    <string name="app_name">Cards</string>

    <string name="supporting">Greyhound divisively hello coldly wonderfully marginally far upon excluding.</string>
    <string name="title">Title</string>
    <string name="subhead">Subhead</string>
    <string name="primary">Title goes here</string>
    <string name="primary_short">Title here</string>
    <string name="subtext">Subtitle here</string>
    <string name="action_1">Action 1</string>
    <string name="action_2">Action 2</string>
    <string name="Apply">Apply</string>
    <string name="expanded_supporting">I\'m a thing. But, like most politicians, he promised more than he could deliver. You won\'t have time for sleeping, soldier, not with all the bed making you\'ll be doing. Then we\'ll go with that data file! Hey, you add a one and two zeros to that or we walk! You\'re going to do his laundry? I\'ve got to find a way to escape.</string>


    <string name="login">LOGIN</string>
    <string name="or_continue">OR CONTINUE WITH</string>
    <string name="facebook_app_id">2588282014565919</string>
    <string name="fb_login_protocol_scheme">fb2588282014565919</string>


    <string name="order">Order</string>
    <string name="filter">Filter</string>
    <string name="search_title">Search Model…</string>
    <string name="order_brand">By Brand</string>
    <string name="order_single">By Single Score</string>
    <string name="order_multi">By Multi Score</string>
    <string name="price">Price</string>
    <string name="sort_price_low_to_high">Price low to high</string>
    <string name="sort_price_high_to_low">Price high to low</string>
    <string name="sort_vfm_low_to_high">Value for money low to high</string>
    <string name="sort_vfm_high_to_low">Value for money high to low</string>
    <string name="sort_1080p">1080p (FPS)</string>
    <string name="sort_2k">2K (FPS)</string>
    <string name="sort_4k">4K (FPS)</string>
    <string name="sort_by">Sort By</string>
    <string name="sort_vfm">Value for Money</string>

    <string name="score_1080p">1080p Performance (avg)</string>
    <string name="score_1440p">1440p Performance (avg)</string>
    <string name="score_4k">4K Performance (avg)</string>
    <string name="score_firestrike">Firestrike</string>
    <string name="score_passmark">Passmark</string>
    <string name="type_vram">Video RAM Type</string>
    <string name="release_date">Release Date</string>
    <string name="gpu_clock">Gpu clock</string>
    <string name="memory_bus">Memory Bus</string>
    <string name="memory_clock">Memory Clock</string>


    <string name="filter_vram">Video RAM Capacity</string>
    <string name="filter_1gb">1GB</string>
    <string name="filter_2gb">2GB</string>
    <string name="filter_4gb">4GB</string>
    <string name="filter_8gb">8GB</string>
    <string name="append_GB"> GB</string>
    <string name="item_price"> €</string>

    <string name="brand">Brand</string>
    <string name="brand_amd">AMD</string>
    <string name="brand_Nvidia">Nvidia</string>

    <string name="seek_bar_title_single">Single-Core Score</string>
    <string name="seek_bar_title_multi">Multi-Core Score</string>
    <string name="seek_bar_min_quad">Quad-Core Score</string>
    <string name="seek_bar_min_label">Min</string>
    <string name="seek_bar_max_label">Max</string>

    <string name="menu_cpu">Processors</string>
    <string name="menu_gpu">Graphics Card</string>
    <string name="menu_settings">Settings</string>

    <string name="dialog_price_title">Please type your local price</string>
    <string name="dialog_price_hint">200</string>
    <string name="confirm">Confirm</string>
    <string name="dismiss">Dismiss</string>
</resources>